# Compact-and-Efficient-Representations-of-Colored-k-mer-Sets

./: README.md  optimizer.cpp  reader.cpp
USTAR_Block_Aware/: CMakeLists.txt  README.md
USTAR_Block_Aware/src/: ColorGraph.cpp  ColorGraph.h  DBG.h  Decoder.h  Encoder.cpp  Encoder.h  Sorter.cpp  Sorter.h  consts.h  mdMap.hpp  ustar.cpp
